[gd_scene load_steps=4 format=3 uid="uid://uuuw0cnt4nw2"]

[ext_resource type="Script" uid="uid://cdys2qa2buuct" path="res://objects/items/types/generators/components/generator_node.gd" id="1_mw66h"]
[ext_resource type="Texture2D" uid="uid://cgu4gs0s0kk5y" path="res://icon.svg" id="2_ndb0s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m6i4n"]
bg_color = Color(0.1488, 0.8649, 0.93, 1)

[node name="GeneratorNode" type="Button"]
custom_minimum_size = Vector2(260, 60)
offset_right = 250.0
offset_bottom = 8.0
script = ExtResource("1_mw66h")

[node name="Timer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
texture = ExtResource("2_ndb0s")
expand_mode = 1
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="QuantityLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.96, 0.96, 0.96, 1)
theme_override_font_sizes/font_size = 12
text = "     ( Owned :  0 )"
autowrap_mode = 3

[node name="NameLabel" type="Label" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.96, 0.96, 0.96, 1)
theme_override_font_sizes/font_size = 16
text = "Generator Name"
autowrap_mode = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/MarginContainer/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 0

[node name="SellButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "Sell"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
visible = false
custom_minimum_size = Vector2(50, 25)
layout_mode = 2
theme_override_colors/background_color = Color(0.821789, 0.821789, 0.821789, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
placeholder_text = "1"
scroll_fit_content_height = true

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
visible = false
layout_mode = 2
rounded = true
allow_greater = true

[node name="BuyButton" type="Button" parent="VBoxContainer/MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 12
text = "Buy"

[node name="GenerateProgress" type="ProgressBar" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_m6i4n")
show_percentage = false
